// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Base JsConfig > should match rule snapshot 1`] = `
{
  "language": "@/js",
  "languageOptions": {
    "ecmaVersion": 2026,
    "globals": {
      "AbortController": false,
      "AbortSignal": false,
      "AggregateError": false,
      "Array": false,
      "ArrayBuffer": false,
      "Atomics": false,
      "BigInt": false,
      "BigInt64Array": false,
      "BigUint64Array": false,
      "Blob": false,
      "Boolean": false,
      "BroadcastChannel": false,
      "Buffer": false,
      "ByteLengthQueuingStrategy": false,
      "CloseEvent": false,
      "CompressionStream": false,
      "CountQueuingStrategy": false,
      "Crypto": false,
      "CryptoKey": false,
      "CustomEvent": false,
      "DOMException": false,
      "DataView": false,
      "Date": false,
      "DecompressionStream": false,
      "Error": false,
      "EvalError": false,
      "Event": false,
      "EventTarget": false,
      "File": false,
      "FinalizationRegistry": false,
      "Float32Array": false,
      "Float64Array": false,
      "FormData": false,
      "Function": false,
      "Headers": false,
      "Infinity": false,
      "Int16Array": false,
      "Int32Array": false,
      "Int8Array": false,
      "Intl": false,
      "JSON": false,
      "Map": false,
      "Math": false,
      "MessageChannel": false,
      "MessageEvent": false,
      "MessagePort": false,
      "NaN": false,
      "Navigator": false,
      "Number": false,
      "Object": false,
      "Performance": false,
      "PerformanceEntry": false,
      "PerformanceMark": false,
      "PerformanceMeasure": false,
      "PerformanceObserver": false,
      "PerformanceObserverEntryList": false,
      "PerformanceResourceTiming": false,
      "Promise": false,
      "Proxy": false,
      "RangeError": false,
      "ReadableByteStreamController": false,
      "ReadableStream": false,
      "ReadableStreamBYOBReader": false,
      "ReadableStreamBYOBRequest": false,
      "ReadableStreamDefaultController": false,
      "ReadableStreamDefaultReader": false,
      "ReferenceError": false,
      "Reflect": false,
      "RegExp": false,
      "Request": false,
      "Response": false,
      "Set": false,
      "SharedArrayBuffer": false,
      "String": false,
      "SubtleCrypto": false,
      "Symbol": false,
      "SyntaxError": false,
      "TextDecoder": false,
      "TextDecoderStream": false,
      "TextEncoder": false,
      "TextEncoderStream": false,
      "TransformStream": false,
      "TransformStreamDefaultController": false,
      "TypeError": false,
      "URIError": false,
      "URL": false,
      "URLSearchParams": false,
      "Uint16Array": false,
      "Uint32Array": false,
      "Uint8Array": false,
      "Uint8ClampedArray": false,
      "WeakMap": false,
      "WeakRef": false,
      "WeakSet": false,
      "WebAssembly": false,
      "WebSocket": false,
      "WritableStream": false,
      "WritableStreamDefaultController": false,
      "WritableStreamDefaultWriter": false,
      "__dirname": "off",
      "__filename": "off",
      "atob": false,
      "btoa": false,
      "clearImmediate": false,
      "clearInterval": false,
      "clearTimeout": false,
      "console": false,
      "crypto": false,
      "decodeURI": false,
      "decodeURIComponent": false,
      "encodeURI": false,
      "encodeURIComponent": false,
      "escape": false,
      "eval": false,
      "exports": "off",
      "fetch": false,
      "global": false,
      "globalThis": false,
      "isFinite": false,
      "isNaN": false,
      "module": "off",
      "navigator": false,
      "parseFloat": false,
      "parseInt": false,
      "performance": false,
      "process": false,
      "queueMicrotask": false,
      "require": "off",
      "setImmediate": false,
      "setInterval": false,
      "setTimeout": false,
      "structuredClone": false,
      "undefined": false,
      "unescape": false,
    },
    "parser": "espree@10.4.0",
    "parserOptions": {
      "ecmaFeatures": {
        "jsx": false,
      },
      "sourceType": "module",
    },
    "sourceType": "module",
  },
  "linterOptions": {
    "reportUnusedDisableDirectives": 1,
  },
  "plugins": [
    "@",
    "prettier:eslint-plugin-prettier@5.5.1",
    "n:eslint-plugin-n@17.20.0",
  ],
  "processor": undefined,
  "rules": {
    "@babel/object-curly-spacing": [
      0,
    ],
    "@babel/semi": [
      0,
    ],
    "@stylistic/array-bracket-newline": [
      0,
    ],
    "@stylistic/array-bracket-spacing": [
      0,
    ],
    "@stylistic/array-element-newline": [
      0,
    ],
    "@stylistic/arrow-parens": [
      0,
    ],
    "@stylistic/arrow-spacing": [
      0,
    ],
    "@stylistic/block-spacing": [
      0,
    ],
    "@stylistic/brace-style": [
      0,
    ],
    "@stylistic/comma-dangle": [
      0,
    ],
    "@stylistic/comma-spacing": [
      0,
    ],
    "@stylistic/comma-style": [
      0,
    ],
    "@stylistic/computed-property-spacing": [
      0,
    ],
    "@stylistic/dot-location": [
      0,
    ],
    "@stylistic/eol-last": [
      0,
    ],
    "@stylistic/func-call-spacing": [
      0,
    ],
    "@stylistic/function-call-argument-newline": [
      0,
    ],
    "@stylistic/function-call-spacing": [
      0,
    ],
    "@stylistic/function-paren-newline": [
      0,
    ],
    "@stylistic/generator-star-spacing": [
      0,
    ],
    "@stylistic/implicit-arrow-linebreak": [
      0,
    ],
    "@stylistic/indent": [
      0,
    ],
    "@stylistic/indent-binary-ops": [
      0,
    ],
    "@stylistic/js/array-bracket-newline": [
      0,
    ],
    "@stylistic/js/array-bracket-spacing": [
      0,
    ],
    "@stylistic/js/array-element-newline": [
      0,
    ],
    "@stylistic/js/arrow-parens": [
      0,
    ],
    "@stylistic/js/arrow-spacing": [
      0,
    ],
    "@stylistic/js/block-spacing": [
      0,
    ],
    "@stylistic/js/brace-style": [
      0,
    ],
    "@stylistic/js/comma-dangle": [
      0,
    ],
    "@stylistic/js/comma-spacing": [
      0,
    ],
    "@stylistic/js/comma-style": [
      0,
    ],
    "@stylistic/js/computed-property-spacing": [
      0,
    ],
    "@stylistic/js/dot-location": [
      0,
    ],
    "@stylistic/js/eol-last": [
      0,
    ],
    "@stylistic/js/func-call-spacing": [
      0,
    ],
    "@stylistic/js/function-call-argument-newline": [
      0,
    ],
    "@stylistic/js/function-call-spacing": [
      0,
    ],
    "@stylistic/js/function-paren-newline": [
      0,
    ],
    "@stylistic/js/generator-star-spacing": [
      0,
    ],
    "@stylistic/js/implicit-arrow-linebreak": [
      0,
    ],
    "@stylistic/js/indent": [
      0,
    ],
    "@stylistic/js/jsx-quotes": [
      0,
    ],
    "@stylistic/js/key-spacing": [
      0,
    ],
    "@stylistic/js/keyword-spacing": [
      0,
    ],
    "@stylistic/js/linebreak-style": [
      0,
    ],
    "@stylistic/js/lines-around-comment": [
      0,
    ],
    "@stylistic/js/max-len": [
      0,
    ],
    "@stylistic/js/max-statements-per-line": [
      0,
    ],
    "@stylistic/js/multiline-ternary": [
      0,
    ],
    "@stylistic/js/new-parens": [
      0,
    ],
    "@stylistic/js/newline-per-chained-call": [
      0,
    ],
    "@stylistic/js/no-confusing-arrow": [
      0,
    ],
    "@stylistic/js/no-extra-parens": [
      0,
    ],
    "@stylistic/js/no-extra-semi": [
      0,
    ],
    "@stylistic/js/no-floating-decimal": [
      0,
    ],
    "@stylistic/js/no-mixed-operators": [
      0,
    ],
    "@stylistic/js/no-mixed-spaces-and-tabs": [
      0,
    ],
    "@stylistic/js/no-multi-spaces": [
      0,
    ],
    "@stylistic/js/no-multiple-empty-lines": [
      0,
    ],
    "@stylistic/js/no-tabs": [
      0,
    ],
    "@stylistic/js/no-trailing-spaces": [
      0,
    ],
    "@stylistic/js/no-whitespace-before-property": [
      0,
    ],
    "@stylistic/js/nonblock-statement-body-position": [
      0,
    ],
    "@stylistic/js/object-curly-newline": [
      0,
    ],
    "@stylistic/js/object-curly-spacing": [
      0,
    ],
    "@stylistic/js/object-property-newline": [
      0,
    ],
    "@stylistic/js/one-var-declaration-per-line": [
      0,
    ],
    "@stylistic/js/operator-linebreak": [
      0,
    ],
    "@stylistic/js/padded-blocks": [
      0,
    ],
    "@stylistic/js/quote-props": [
      0,
    ],
    "@stylistic/js/quotes": [
      0,
    ],
    "@stylistic/js/rest-spread-spacing": [
      0,
    ],
    "@stylistic/js/semi": [
      0,
    ],
    "@stylistic/js/semi-spacing": [
      0,
    ],
    "@stylistic/js/semi-style": [
      0,
    ],
    "@stylistic/js/space-before-blocks": [
      0,
    ],
    "@stylistic/js/space-before-function-paren": [
      0,
    ],
    "@stylistic/js/space-in-parens": [
      0,
    ],
    "@stylistic/js/space-infix-ops": [
      0,
    ],
    "@stylistic/js/space-unary-ops": [
      0,
    ],
    "@stylistic/js/switch-colon-spacing": [
      0,
    ],
    "@stylistic/js/template-curly-spacing": [
      0,
    ],
    "@stylistic/js/template-tag-spacing": [
      0,
    ],
    "@stylistic/js/wrap-iife": [
      0,
    ],
    "@stylistic/js/wrap-regex": [
      0,
    ],
    "@stylistic/js/yield-star-spacing": [
      0,
    ],
    "@stylistic/jsx-child-element-spacing": [
      0,
    ],
    "@stylistic/jsx-closing-bracket-location": [
      0,
    ],
    "@stylistic/jsx-closing-tag-location": [
      0,
    ],
    "@stylistic/jsx-curly-newline": [
      0,
    ],
    "@stylistic/jsx-curly-spacing": [
      0,
    ],
    "@stylistic/jsx-equals-spacing": [
      0,
    ],
    "@stylistic/jsx-first-prop-new-line": [
      0,
    ],
    "@stylistic/jsx-indent": [
      0,
    ],
    "@stylistic/jsx-indent-props": [
      0,
    ],
    "@stylistic/jsx-max-props-per-line": [
      0,
    ],
    "@stylistic/jsx-newline": [
      0,
    ],
    "@stylistic/jsx-one-expression-per-line": [
      0,
    ],
    "@stylistic/jsx-props-no-multi-spaces": [
      0,
    ],
    "@stylistic/jsx-quotes": [
      0,
    ],
    "@stylistic/jsx-tag-spacing": [
      0,
    ],
    "@stylistic/jsx-wrap-multilines": [
      0,
    ],
    "@stylistic/jsx/jsx-child-element-spacing": [
      0,
    ],
    "@stylistic/jsx/jsx-closing-bracket-location": [
      0,
    ],
    "@stylistic/jsx/jsx-closing-tag-location": [
      0,
    ],
    "@stylistic/jsx/jsx-curly-newline": [
      0,
    ],
    "@stylistic/jsx/jsx-curly-spacing": [
      0,
    ],
    "@stylistic/jsx/jsx-equals-spacing": [
      0,
    ],
    "@stylistic/jsx/jsx-first-prop-new-line": [
      0,
    ],
    "@stylistic/jsx/jsx-indent": [
      0,
    ],
    "@stylistic/jsx/jsx-indent-props": [
      0,
    ],
    "@stylistic/jsx/jsx-max-props-per-line": [
      0,
    ],
    "@stylistic/key-spacing": [
      0,
    ],
    "@stylistic/keyword-spacing": [
      0,
    ],
    "@stylistic/linebreak-style": [
      0,
    ],
    "@stylistic/lines-around-comment": [
      0,
    ],
    "@stylistic/max-len": [
      0,
    ],
    "@stylistic/max-statements-per-line": [
      0,
    ],
    "@stylistic/member-delimiter-style": [
      0,
    ],
    "@stylistic/multiline-ternary": [
      0,
    ],
    "@stylistic/new-parens": [
      0,
    ],
    "@stylistic/newline-per-chained-call": [
      0,
    ],
    "@stylistic/no-confusing-arrow": [
      0,
    ],
    "@stylistic/no-extra-parens": [
      0,
    ],
    "@stylistic/no-extra-semi": [
      0,
    ],
    "@stylistic/no-floating-decimal": [
      0,
    ],
    "@stylistic/no-mixed-operators": [
      0,
    ],
    "@stylistic/no-mixed-spaces-and-tabs": [
      0,
    ],
    "@stylistic/no-multi-spaces": [
      0,
    ],
    "@stylistic/no-multiple-empty-lines": [
      0,
    ],
    "@stylistic/no-tabs": [
      0,
    ],
    "@stylistic/no-trailing-spaces": [
      0,
    ],
    "@stylistic/no-whitespace-before-property": [
      0,
    ],
    "@stylistic/nonblock-statement-body-position": [
      0,
    ],
    "@stylistic/object-curly-newline": [
      0,
    ],
    "@stylistic/object-curly-spacing": [
      0,
    ],
    "@stylistic/object-property-newline": [
      0,
    ],
    "@stylistic/one-var-declaration-per-line": [
      0,
    ],
    "@stylistic/operator-linebreak": [
      0,
    ],
    "@stylistic/padded-blocks": [
      0,
    ],
    "@stylistic/quote-props": [
      0,
    ],
    "@stylistic/quotes": [
      0,
    ],
    "@stylistic/rest-spread-spacing": [
      0,
    ],
    "@stylistic/semi": [
      0,
    ],
    "@stylistic/semi-spacing": [
      0,
    ],
    "@stylistic/semi-style": [
      0,
    ],
    "@stylistic/space-before-blocks": [
      0,
    ],
    "@stylistic/space-before-function-paren": [
      0,
    ],
    "@stylistic/space-in-parens": [
      0,
    ],
    "@stylistic/space-infix-ops": [
      0,
    ],
    "@stylistic/space-unary-ops": [
      0,
    ],
    "@stylistic/switch-colon-spacing": [
      0,
    ],
    "@stylistic/template-curly-spacing": [
      0,
    ],
    "@stylistic/template-tag-spacing": [
      0,
    ],
    "@stylistic/ts/block-spacing": [
      0,
    ],
    "@stylistic/ts/brace-style": [
      0,
    ],
    "@stylistic/ts/comma-dangle": [
      0,
    ],
    "@stylistic/ts/comma-spacing": [
      0,
    ],
    "@stylistic/ts/func-call-spacing": [
      0,
    ],
    "@stylistic/ts/function-call-spacing": [
      0,
    ],
    "@stylistic/ts/indent": [
      0,
    ],
    "@stylistic/ts/key-spacing": [
      0,
    ],
    "@stylistic/ts/keyword-spacing": [
      0,
    ],
    "@stylistic/ts/lines-around-comment": [
      0,
    ],
    "@stylistic/ts/member-delimiter-style": [
      0,
    ],
    "@stylistic/ts/no-extra-parens": [
      0,
    ],
    "@stylistic/ts/no-extra-semi": [
      0,
    ],
    "@stylistic/ts/object-curly-spacing": [
      0,
    ],
    "@stylistic/ts/quotes": [
      0,
    ],
    "@stylistic/ts/semi": [
      0,
    ],
    "@stylistic/ts/space-before-blocks": [
      0,
    ],
    "@stylistic/ts/space-before-function-paren": [
      0,
    ],
    "@stylistic/ts/space-infix-ops": [
      0,
    ],
    "@stylistic/ts/type-annotation-spacing": [
      0,
    ],
    "@stylistic/type-annotation-spacing": [
      0,
    ],
    "@stylistic/type-generic-spacing": [
      0,
    ],
    "@stylistic/type-named-tuple-spacing": [
      0,
    ],
    "@stylistic/wrap-iife": [
      0,
    ],
    "@stylistic/wrap-regex": [
      0,
    ],
    "@stylistic/yield-star-spacing": [
      0,
    ],
    "@typescript-eslint/block-spacing": [
      0,
    ],
    "@typescript-eslint/brace-style": [
      0,
    ],
    "@typescript-eslint/comma-dangle": [
      0,
    ],
    "@typescript-eslint/comma-spacing": [
      0,
    ],
    "@typescript-eslint/func-call-spacing": [
      0,
    ],
    "@typescript-eslint/indent": [
      0,
    ],
    "@typescript-eslint/key-spacing": [
      0,
    ],
    "@typescript-eslint/keyword-spacing": [
      0,
    ],
    "@typescript-eslint/lines-around-comment": [
      0,
    ],
    "@typescript-eslint/member-delimiter-style": [
      0,
    ],
    "@typescript-eslint/no-extra-parens": [
      0,
    ],
    "@typescript-eslint/no-extra-semi": [
      0,
    ],
    "@typescript-eslint/object-curly-spacing": [
      0,
    ],
    "@typescript-eslint/quotes": [
      0,
    ],
    "@typescript-eslint/semi": [
      0,
    ],
    "@typescript-eslint/space-before-blocks": [
      0,
    ],
    "@typescript-eslint/space-before-function-paren": [
      0,
    ],
    "@typescript-eslint/space-infix-ops": [
      0,
    ],
    "@typescript-eslint/type-annotation-spacing": [
      0,
    ],
    "array-bracket-newline": [
      0,
    ],
    "array-bracket-spacing": [
      0,
    ],
    "array-element-newline": [
      0,
    ],
    "arrow-body-style": [
      0,
      "as-needed",
    ],
    "arrow-parens": [
      0,
    ],
    "arrow-spacing": [
      0,
    ],
    "babel/object-curly-spacing": [
      0,
    ],
    "babel/quotes": [
      0,
    ],
    "babel/semi": [
      0,
    ],
    "block-spacing": [
      0,
    ],
    "brace-style": [
      0,
    ],
    "comma-dangle": [
      0,
    ],
    "comma-spacing": [
      0,
    ],
    "comma-style": [
      0,
    ],
    "computed-property-spacing": [
      0,
    ],
    "constructor-super": [
      2,
    ],
    "curly": [
      0,
      "all",
    ],
    "dot-location": [
      0,
    ],
    "eol-last": [
      0,
    ],
    "eqeqeq": [
      2,
      "always",
      {
        "null": "ignore",
      },
    ],
    "flowtype/boolean-style": [
      0,
    ],
    "flowtype/delimiter-dangle": [
      0,
    ],
    "flowtype/generic-spacing": [
      0,
    ],
    "flowtype/object-type-curly-spacing": [
      0,
    ],
    "flowtype/object-type-delimiter": [
      0,
    ],
    "flowtype/quotes": [
      0,
    ],
    "flowtype/semi": [
      0,
    ],
    "flowtype/space-after-type-colon": [
      0,
    ],
    "flowtype/space-before-generic-bracket": [
      0,
    ],
    "flowtype/space-before-type-colon": [
      0,
    ],
    "flowtype/union-intersection-spacing": [
      0,
    ],
    "for-direction": [
      2,
    ],
    "func-call-spacing": [
      0,
    ],
    "function-call-argument-newline": [
      0,
    ],
    "function-paren-newline": [
      0,
    ],
    "generator-star": [
      0,
    ],
    "generator-star-spacing": [
      0,
    ],
    "getter-return": [
      2,
      {
        "allowImplicit": false,
      },
    ],
    "implicit-arrow-linebreak": [
      0,
    ],
    "indent": [
      0,
    ],
    "indent-legacy": [
      0,
    ],
    "jsx-quotes": [
      0,
    ],
    "key-spacing": [
      0,
    ],
    "keyword-spacing": [
      0,
    ],
    "linebreak-style": [
      0,
    ],
    "lines-around-comment": [
      0,
    ],
    "max-len": [
      0,
    ],
    "max-statements-per-line": [
      0,
    ],
    "multiline-ternary": [
      0,
    ],
    "n/hashbang": [
      2,
    ],
    "n/no-deprecated-api": [
      2,
    ],
    "n/no-exports-assign": [
      2,
    ],
    "n/no-extraneous-import": [
      0,
    ],
    "n/no-extraneous-require": [
      0,
    ],
    "n/no-missing-import": [
      0,
    ],
    "n/no-missing-require": [
      0,
    ],
    "n/no-process-exit": [
      2,
    ],
    "n/no-unpublished-bin": [
      2,
    ],
    "n/no-unpublished-import": [
      0,
    ],
    "n/no-unpublished-require": [
      0,
    ],
    "n/no-unsupported-features/es-builtins": [
      2,
    ],
    "n/no-unsupported-features/es-syntax": [
      2,
      {
        "ignores": [
          "modules",
        ],
      },
    ],
    "n/no-unsupported-features/node-builtins": [
      2,
    ],
    "n/process-exit-as-throw": [
      2,
    ],
    "new-parens": [
      0,
    ],
    "newline-per-chained-call": [
      0,
    ],
    "no-arrow-condition": [
      0,
    ],
    "no-async-promise-executor": [
      2,
    ],
    "no-case-declarations": [
      2,
    ],
    "no-class-assign": [
      2,
    ],
    "no-comma-dangle": [
      0,
    ],
    "no-compare-neg-zero": [
      2,
    ],
    "no-cond-assign": [
      2,
      "except-parens",
    ],
    "no-confusing-arrow": [
      0,
    ],
    "no-const-assign": [
      2,
    ],
    "no-constant-binary-expression": [
      2,
    ],
    "no-constant-condition": [
      2,
      {
        "checkLoops": "allExceptWhileTrue",
      },
    ],
    "no-control-regex": [
      2,
    ],
    "no-debugger": [
      2,
    ],
    "no-delete-var": [
      2,
    ],
    "no-dupe-args": [
      2,
    ],
    "no-dupe-class-members": [
      2,
    ],
    "no-dupe-else-if": [
      2,
    ],
    "no-dupe-keys": [
      2,
    ],
    "no-duplicate-case": [
      2,
    ],
    "no-empty": [
      2,
      {
        "allowEmptyCatch": false,
      },
    ],
    "no-empty-character-class": [
      2,
    ],
    "no-empty-pattern": [
      2,
      {
        "allowObjectPatternsAsParameters": false,
      },
    ],
    "no-empty-static-block": [
      2,
    ],
    "no-ex-assign": [
      2,
    ],
    "no-extra-boolean-cast": [
      2,
      {},
    ],
    "no-extra-parens": [
      0,
    ],
    "no-extra-semi": [
      0,
    ],
    "no-fallthrough": [
      2,
      {
        "allowEmptyCase": false,
        "reportUnusedFallthroughComment": false,
      },
    ],
    "no-floating-decimal": [
      0,
    ],
    "no-func-assign": [
      2,
    ],
    "no-global-assign": [
      2,
      {
        "exceptions": [],
      },
    ],
    "no-import-assign": [
      2,
    ],
    "no-invalid-regexp": [
      2,
      {},
    ],
    "no-irregular-whitespace": [
      2,
      {
        "skipComments": false,
        "skipJSXText": false,
        "skipRegExps": false,
        "skipStrings": true,
        "skipTemplates": false,
      },
    ],
    "no-loss-of-precision": [
      2,
    ],
    "no-misleading-character-class": [
      2,
    ],
    "no-mixed-operators": [
      0,
    ],
    "no-mixed-spaces-and-tabs": [
      0,
    ],
    "no-multi-spaces": [
      0,
    ],
    "no-multiple-empty-lines": [
      0,
    ],
    "no-new-native-nonconstructor": [
      2,
    ],
    "no-nonoctal-decimal-escape": [
      2,
    ],
    "no-obj-calls": [
      2,
    ],
    "no-octal": [
      2,
    ],
    "no-prototype-builtins": [
      2,
    ],
    "no-redeclare": [
      2,
      {
        "builtinGlobals": true,
      },
    ],
    "no-regex-spaces": [
      2,
    ],
    "no-reserved-keys": [
      0,
    ],
    "no-self-assign": [
      2,
      {
        "props": true,
      },
    ],
    "no-setter-return": [
      2,
    ],
    "no-shadow-restricted-names": [
      2,
      {
        "reportGlobalThis": false,
      },
    ],
    "no-space-before-semi": [
      0,
    ],
    "no-spaced-func": [
      0,
    ],
    "no-sparse-arrays": [
      2,
    ],
    "no-tabs": [
      0,
    ],
    "no-this-before-super": [
      2,
    ],
    "no-trailing-spaces": [
      0,
    ],
    "no-undef": [
      2,
      {
        "typeof": false,
      },
    ],
    "no-unexpected-multiline": [
      2,
    ],
    "no-unreachable": [
      2,
    ],
    "no-unsafe-finally": [
      2,
    ],
    "no-unsafe-negation": [
      2,
      {
        "enforceForOrderingRelations": false,
      },
    ],
    "no-unsafe-optional-chaining": [
      2,
      {
        "disallowArithmeticOperators": false,
      },
    ],
    "no-unused-expressions": [
      2,
      {
        "allowShortCircuit": true,
        "allowTaggedTemplates": true,
        "allowTernary": true,
        "enforceForJSX": false,
        "ignoreDirectives": true,
      },
    ],
    "no-unused-labels": [
      2,
    ],
    "no-unused-private-class-members": [
      2,
    ],
    "no-unused-vars": [
      2,
      {
        "args": "after-used",
        "caughtErrors": "none",
        "ignoreRestSiblings": true,
        "vars": "all",
      },
    ],
    "no-useless-backreference": [
      2,
    ],
    "no-useless-catch": [
      2,
    ],
    "no-useless-escape": [
      2,
      {
        "allowRegexCharacters": [],
      },
    ],
    "no-whitespace-before-property": [
      0,
    ],
    "no-with": [
      2,
    ],
    "no-wrap-func": [
      0,
    ],
    "nonblock-statement-body-position": [
      0,
    ],
    "object-curly-newline": [
      0,
    ],
    "object-curly-spacing": [
      0,
    ],
    "object-property-newline": [
      0,
    ],
    "one-var-declaration-per-line": [
      0,
    ],
    "operator-linebreak": [
      0,
    ],
    "padded-blocks": [
      0,
    ],
    "prefer-arrow-callback": [
      0,
      {
        "allowNamedFunctions": false,
        "allowUnboundThis": true,
      },
    ],
    "prettier/prettier": [
      2,
    ],
    "quote-props": [
      0,
    ],
    "quotes": [
      0,
    ],
    "react/jsx-child-element-spacing": [
      0,
    ],
    "react/jsx-closing-bracket-location": [
      0,
    ],
    "react/jsx-closing-tag-location": [
      0,
    ],
    "react/jsx-curly-newline": [
      0,
    ],
    "react/jsx-curly-spacing": [
      0,
    ],
    "react/jsx-equals-spacing": [
      0,
    ],
    "react/jsx-first-prop-new-line": [
      0,
    ],
    "react/jsx-indent": [
      0,
    ],
    "react/jsx-indent-props": [
      0,
    ],
    "react/jsx-max-props-per-line": [
      0,
    ],
    "react/jsx-newline": [
      0,
    ],
    "react/jsx-one-expression-per-line": [
      0,
    ],
    "react/jsx-props-no-multi-spaces": [
      0,
    ],
    "react/jsx-space-before-closing": [
      0,
    ],
    "react/jsx-tag-spacing": [
      0,
    ],
    "react/jsx-wrap-multilines": [
      0,
    ],
    "require-yield": [
      2,
    ],
    "rest-spread-spacing": [
      0,
    ],
    "semi": [
      0,
    ],
    "semi-spacing": [
      0,
    ],
    "semi-style": [
      0,
    ],
    "space-after-function-name": [
      0,
    ],
    "space-after-keywords": [
      0,
    ],
    "space-before-blocks": [
      0,
    ],
    "space-before-function-paren": [
      0,
    ],
    "space-before-function-parentheses": [
      0,
    ],
    "space-before-keywords": [
      0,
    ],
    "space-in-brackets": [
      0,
    ],
    "space-in-parens": [
      0,
    ],
    "space-infix-ops": [
      0,
    ],
    "space-return-throw-case": [
      0,
    ],
    "space-unary-ops": [
      0,
    ],
    "space-unary-word-ops": [
      0,
    ],
    "standard/array-bracket-even-spacing": [
      0,
    ],
    "standard/computed-property-even-spacing": [
      0,
    ],
    "standard/object-curly-even-spacing": [
      0,
    ],
    "switch-colon-spacing": [
      0,
    ],
    "template-curly-spacing": [
      0,
    ],
    "template-tag-spacing": [
      0,
    ],
    "unicorn/empty-brace-spaces": [
      0,
    ],
    "unicorn/no-nested-ternary": [
      0,
    ],
    "unicorn/number-literal-case": [
      0,
    ],
    "unicorn/template-indent": [
      0,
    ],
    "use-isnan": [
      2,
      {
        "enforceForIndexOf": false,
        "enforceForSwitchCase": true,
      },
    ],
    "valid-typeof": [
      2,
      {
        "requireStringLiterals": false,
      },
    ],
    "vue/array-bracket-newline": [
      0,
    ],
    "vue/array-bracket-spacing": [
      0,
    ],
    "vue/array-element-newline": [
      0,
    ],
    "vue/arrow-spacing": [
      0,
    ],
    "vue/block-spacing": [
      0,
    ],
    "vue/block-tag-newline": [
      0,
    ],
    "vue/brace-style": [
      0,
    ],
    "vue/comma-dangle": [
      0,
    ],
    "vue/comma-spacing": [
      0,
    ],
    "vue/comma-style": [
      0,
    ],
    "vue/dot-location": [
      0,
    ],
    "vue/func-call-spacing": [
      0,
    ],
    "vue/html-closing-bracket-newline": [
      0,
    ],
    "vue/html-closing-bracket-spacing": [
      0,
    ],
    "vue/html-end-tags": [
      0,
    ],
    "vue/html-indent": [
      0,
    ],
    "vue/html-quotes": [
      0,
    ],
    "vue/html-self-closing": [
      0,
    ],
    "vue/key-spacing": [
      0,
    ],
    "vue/keyword-spacing": [
      0,
    ],
    "vue/max-attributes-per-line": [
      0,
    ],
    "vue/max-len": [
      0,
    ],
    "vue/multiline-html-element-content-newline": [
      0,
    ],
    "vue/multiline-ternary": [
      0,
    ],
    "vue/mustache-interpolation-spacing": [
      0,
    ],
    "vue/no-extra-parens": [
      0,
    ],
    "vue/no-multi-spaces": [
      0,
    ],
    "vue/no-spaces-around-equal-signs-in-attribute": [
      0,
    ],
    "vue/object-curly-newline": [
      0,
    ],
    "vue/object-curly-spacing": [
      0,
    ],
    "vue/object-property-newline": [
      0,
    ],
    "vue/operator-linebreak": [
      0,
    ],
    "vue/quote-props": [
      0,
    ],
    "vue/script-indent": [
      0,
    ],
    "vue/singleline-html-element-content-newline": [
      0,
    ],
    "vue/space-in-parens": [
      0,
    ],
    "vue/space-infix-ops": [
      0,
    ],
    "vue/space-unary-ops": [
      0,
    ],
    "vue/template-curly-spacing": [
      0,
    ],
    "wrap-iife": [
      0,
    ],
    "wrap-regex": [
      0,
    ],
    "yield-star-spacing": [
      0,
    ],
  },
}
`;

exports[`Base TsConfig > should match rule snapshot 1`] = `
{
  "language": "@/js",
  "languageOptions": {
    "ecmaVersion": 2026,
    "globals": {
      "AbortController": false,
      "AbortSignal": false,
      "AggregateError": false,
      "Array": false,
      "ArrayBuffer": false,
      "Atomics": false,
      "BigInt": false,
      "BigInt64Array": false,
      "BigUint64Array": false,
      "Blob": false,
      "Boolean": false,
      "BroadcastChannel": false,
      "Buffer": false,
      "ByteLengthQueuingStrategy": false,
      "CloseEvent": false,
      "CompressionStream": false,
      "CountQueuingStrategy": false,
      "Crypto": false,
      "CryptoKey": false,
      "CustomEvent": false,
      "DOMException": false,
      "DataView": false,
      "Date": false,
      "DecompressionStream": false,
      "Error": false,
      "EvalError": false,
      "Event": false,
      "EventTarget": false,
      "File": false,
      "FinalizationRegistry": false,
      "Float32Array": false,
      "Float64Array": false,
      "FormData": false,
      "Function": false,
      "Headers": false,
      "Infinity": false,
      "Int16Array": false,
      "Int32Array": false,
      "Int8Array": false,
      "Intl": false,
      "JSON": false,
      "Map": false,
      "Math": false,
      "MessageChannel": false,
      "MessageEvent": false,
      "MessagePort": false,
      "NaN": false,
      "Navigator": false,
      "Number": false,
      "Object": false,
      "Performance": false,
      "PerformanceEntry": false,
      "PerformanceMark": false,
      "PerformanceMeasure": false,
      "PerformanceObserver": false,
      "PerformanceObserverEntryList": false,
      "PerformanceResourceTiming": false,
      "Promise": false,
      "Proxy": false,
      "RangeError": false,
      "ReadableByteStreamController": false,
      "ReadableStream": false,
      "ReadableStreamBYOBReader": false,
      "ReadableStreamBYOBRequest": false,
      "ReadableStreamDefaultController": false,
      "ReadableStreamDefaultReader": false,
      "ReferenceError": false,
      "Reflect": false,
      "RegExp": false,
      "Request": false,
      "Response": false,
      "Set": false,
      "SharedArrayBuffer": false,
      "String": false,
      "SubtleCrypto": false,
      "Symbol": false,
      "SyntaxError": false,
      "TextDecoder": false,
      "TextDecoderStream": false,
      "TextEncoder": false,
      "TextEncoderStream": false,
      "TransformStream": false,
      "TransformStreamDefaultController": false,
      "TypeError": false,
      "URIError": false,
      "URL": false,
      "URLSearchParams": false,
      "Uint16Array": false,
      "Uint32Array": false,
      "Uint8Array": false,
      "Uint8ClampedArray": false,
      "WeakMap": false,
      "WeakRef": false,
      "WeakSet": false,
      "WebAssembly": false,
      "WebSocket": false,
      "WritableStream": false,
      "WritableStreamDefaultController": false,
      "WritableStreamDefaultWriter": false,
      "__dirname": "off",
      "__filename": "off",
      "atob": false,
      "btoa": false,
      "clearImmediate": false,
      "clearInterval": false,
      "clearTimeout": false,
      "console": false,
      "crypto": false,
      "decodeURI": false,
      "decodeURIComponent": false,
      "encodeURI": false,
      "encodeURIComponent": false,
      "escape": false,
      "eval": false,
      "exports": "off",
      "fetch": false,
      "global": false,
      "globalThis": false,
      "isFinite": false,
      "isNaN": false,
      "module": "off",
      "navigator": false,
      "parseFloat": false,
      "parseInt": false,
      "performance": false,
      "process": false,
      "queueMicrotask": false,
      "require": "off",
      "setImmediate": false,
      "setInterval": false,
      "setTimeout": false,
      "structuredClone": false,
      "undefined": false,
      "unescape": false,
    },
    "parser": "typescript-eslint/parser@8.35.1",
    "parserOptions": {
      "ecmaFeatures": {
        "jsx": false,
      },
      "project": true,
      "tsconfigRootDir": "tsconfig.json",
    },
    "sourceType": "module",
  },
  "linterOptions": {
    "reportUnusedDisableDirectives": 1,
  },
  "plugins": [
    "@",
    "prettier:eslint-plugin-prettier@5.5.1",
    "n:eslint-plugin-n@17.20.0",
    "@typescript-eslint:@typescript-eslint/eslint-plugin@8.35.1",
  ],
  "processor": undefined,
  "rules": {
    "@babel/object-curly-spacing": [
      0,
    ],
    "@babel/semi": [
      0,
    ],
    "@stylistic/array-bracket-newline": [
      0,
    ],
    "@stylistic/array-bracket-spacing": [
      0,
    ],
    "@stylistic/array-element-newline": [
      0,
    ],
    "@stylistic/arrow-parens": [
      0,
    ],
    "@stylistic/arrow-spacing": [
      0,
    ],
    "@stylistic/block-spacing": [
      0,
    ],
    "@stylistic/brace-style": [
      0,
    ],
    "@stylistic/comma-dangle": [
      0,
    ],
    "@stylistic/comma-spacing": [
      0,
    ],
    "@stylistic/comma-style": [
      0,
    ],
    "@stylistic/computed-property-spacing": [
      0,
    ],
    "@stylistic/dot-location": [
      0,
    ],
    "@stylistic/eol-last": [
      0,
    ],
    "@stylistic/func-call-spacing": [
      0,
    ],
    "@stylistic/function-call-argument-newline": [
      0,
    ],
    "@stylistic/function-call-spacing": [
      0,
    ],
    "@stylistic/function-paren-newline": [
      0,
    ],
    "@stylistic/generator-star-spacing": [
      0,
    ],
    "@stylistic/implicit-arrow-linebreak": [
      0,
    ],
    "@stylistic/indent": [
      0,
    ],
    "@stylistic/indent-binary-ops": [
      0,
    ],
    "@stylistic/js/array-bracket-newline": [
      0,
    ],
    "@stylistic/js/array-bracket-spacing": [
      0,
    ],
    "@stylistic/js/array-element-newline": [
      0,
    ],
    "@stylistic/js/arrow-parens": [
      0,
    ],
    "@stylistic/js/arrow-spacing": [
      0,
    ],
    "@stylistic/js/block-spacing": [
      0,
    ],
    "@stylistic/js/brace-style": [
      0,
    ],
    "@stylistic/js/comma-dangle": [
      0,
    ],
    "@stylistic/js/comma-spacing": [
      0,
    ],
    "@stylistic/js/comma-style": [
      0,
    ],
    "@stylistic/js/computed-property-spacing": [
      0,
    ],
    "@stylistic/js/dot-location": [
      0,
    ],
    "@stylistic/js/eol-last": [
      0,
    ],
    "@stylistic/js/func-call-spacing": [
      0,
    ],
    "@stylistic/js/function-call-argument-newline": [
      0,
    ],
    "@stylistic/js/function-call-spacing": [
      0,
    ],
    "@stylistic/js/function-paren-newline": [
      0,
    ],
    "@stylistic/js/generator-star-spacing": [
      0,
    ],
    "@stylistic/js/implicit-arrow-linebreak": [
      0,
    ],
    "@stylistic/js/indent": [
      0,
    ],
    "@stylistic/js/jsx-quotes": [
      0,
    ],
    "@stylistic/js/key-spacing": [
      0,
    ],
    "@stylistic/js/keyword-spacing": [
      0,
    ],
    "@stylistic/js/linebreak-style": [
      0,
    ],
    "@stylistic/js/lines-around-comment": [
      0,
    ],
    "@stylistic/js/max-len": [
      0,
    ],
    "@stylistic/js/max-statements-per-line": [
      0,
    ],
    "@stylistic/js/multiline-ternary": [
      0,
    ],
    "@stylistic/js/new-parens": [
      0,
    ],
    "@stylistic/js/newline-per-chained-call": [
      0,
    ],
    "@stylistic/js/no-confusing-arrow": [
      0,
    ],
    "@stylistic/js/no-extra-parens": [
      0,
    ],
    "@stylistic/js/no-extra-semi": [
      0,
    ],
    "@stylistic/js/no-floating-decimal": [
      0,
    ],
    "@stylistic/js/no-mixed-operators": [
      0,
    ],
    "@stylistic/js/no-mixed-spaces-and-tabs": [
      0,
    ],
    "@stylistic/js/no-multi-spaces": [
      0,
    ],
    "@stylistic/js/no-multiple-empty-lines": [
      0,
    ],
    "@stylistic/js/no-tabs": [
      0,
    ],
    "@stylistic/js/no-trailing-spaces": [
      0,
    ],
    "@stylistic/js/no-whitespace-before-property": [
      0,
    ],
    "@stylistic/js/nonblock-statement-body-position": [
      0,
    ],
    "@stylistic/js/object-curly-newline": [
      0,
    ],
    "@stylistic/js/object-curly-spacing": [
      0,
    ],
    "@stylistic/js/object-property-newline": [
      0,
    ],
    "@stylistic/js/one-var-declaration-per-line": [
      0,
    ],
    "@stylistic/js/operator-linebreak": [
      0,
    ],
    "@stylistic/js/padded-blocks": [
      0,
    ],
    "@stylistic/js/quote-props": [
      0,
    ],
    "@stylistic/js/quotes": [
      0,
    ],
    "@stylistic/js/rest-spread-spacing": [
      0,
    ],
    "@stylistic/js/semi": [
      0,
    ],
    "@stylistic/js/semi-spacing": [
      0,
    ],
    "@stylistic/js/semi-style": [
      0,
    ],
    "@stylistic/js/space-before-blocks": [
      0,
    ],
    "@stylistic/js/space-before-function-paren": [
      0,
    ],
    "@stylistic/js/space-in-parens": [
      0,
    ],
    "@stylistic/js/space-infix-ops": [
      0,
    ],
    "@stylistic/js/space-unary-ops": [
      0,
    ],
    "@stylistic/js/switch-colon-spacing": [
      0,
    ],
    "@stylistic/js/template-curly-spacing": [
      0,
    ],
    "@stylistic/js/template-tag-spacing": [
      0,
    ],
    "@stylistic/js/wrap-iife": [
      0,
    ],
    "@stylistic/js/wrap-regex": [
      0,
    ],
    "@stylistic/js/yield-star-spacing": [
      0,
    ],
    "@stylistic/jsx-child-element-spacing": [
      0,
    ],
    "@stylistic/jsx-closing-bracket-location": [
      0,
    ],
    "@stylistic/jsx-closing-tag-location": [
      0,
    ],
    "@stylistic/jsx-curly-newline": [
      0,
    ],
    "@stylistic/jsx-curly-spacing": [
      0,
    ],
    "@stylistic/jsx-equals-spacing": [
      0,
    ],
    "@stylistic/jsx-first-prop-new-line": [
      0,
    ],
    "@stylistic/jsx-indent": [
      0,
    ],
    "@stylistic/jsx-indent-props": [
      0,
    ],
    "@stylistic/jsx-max-props-per-line": [
      0,
    ],
    "@stylistic/jsx-newline": [
      0,
    ],
    "@stylistic/jsx-one-expression-per-line": [
      0,
    ],
    "@stylistic/jsx-props-no-multi-spaces": [
      0,
    ],
    "@stylistic/jsx-quotes": [
      0,
    ],
    "@stylistic/jsx-tag-spacing": [
      0,
    ],
    "@stylistic/jsx-wrap-multilines": [
      0,
    ],
    "@stylistic/jsx/jsx-child-element-spacing": [
      0,
    ],
    "@stylistic/jsx/jsx-closing-bracket-location": [
      0,
    ],
    "@stylistic/jsx/jsx-closing-tag-location": [
      0,
    ],
    "@stylistic/jsx/jsx-curly-newline": [
      0,
    ],
    "@stylistic/jsx/jsx-curly-spacing": [
      0,
    ],
    "@stylistic/jsx/jsx-equals-spacing": [
      0,
    ],
    "@stylistic/jsx/jsx-first-prop-new-line": [
      0,
    ],
    "@stylistic/jsx/jsx-indent": [
      0,
    ],
    "@stylistic/jsx/jsx-indent-props": [
      0,
    ],
    "@stylistic/jsx/jsx-max-props-per-line": [
      0,
    ],
    "@stylistic/key-spacing": [
      0,
    ],
    "@stylistic/keyword-spacing": [
      0,
    ],
    "@stylistic/linebreak-style": [
      0,
    ],
    "@stylistic/lines-around-comment": [
      0,
    ],
    "@stylistic/max-len": [
      0,
    ],
    "@stylistic/max-statements-per-line": [
      0,
    ],
    "@stylistic/member-delimiter-style": [
      0,
    ],
    "@stylistic/multiline-ternary": [
      0,
    ],
    "@stylistic/new-parens": [
      0,
    ],
    "@stylistic/newline-per-chained-call": [
      0,
    ],
    "@stylistic/no-confusing-arrow": [
      0,
    ],
    "@stylistic/no-extra-parens": [
      0,
    ],
    "@stylistic/no-extra-semi": [
      0,
    ],
    "@stylistic/no-floating-decimal": [
      0,
    ],
    "@stylistic/no-mixed-operators": [
      0,
    ],
    "@stylistic/no-mixed-spaces-and-tabs": [
      0,
    ],
    "@stylistic/no-multi-spaces": [
      0,
    ],
    "@stylistic/no-multiple-empty-lines": [
      0,
    ],
    "@stylistic/no-tabs": [
      0,
    ],
    "@stylistic/no-trailing-spaces": [
      0,
    ],
    "@stylistic/no-whitespace-before-property": [
      0,
    ],
    "@stylistic/nonblock-statement-body-position": [
      0,
    ],
    "@stylistic/object-curly-newline": [
      0,
    ],
    "@stylistic/object-curly-spacing": [
      0,
    ],
    "@stylistic/object-property-newline": [
      0,
    ],
    "@stylistic/one-var-declaration-per-line": [
      0,
    ],
    "@stylistic/operator-linebreak": [
      0,
    ],
    "@stylistic/padded-blocks": [
      0,
    ],
    "@stylistic/quote-props": [
      0,
    ],
    "@stylistic/quotes": [
      0,
    ],
    "@stylistic/rest-spread-spacing": [
      0,
    ],
    "@stylistic/semi": [
      0,
    ],
    "@stylistic/semi-spacing": [
      0,
    ],
    "@stylistic/semi-style": [
      0,
    ],
    "@stylistic/space-before-blocks": [
      0,
    ],
    "@stylistic/space-before-function-paren": [
      0,
    ],
    "@stylistic/space-in-parens": [
      0,
    ],
    "@stylistic/space-infix-ops": [
      0,
    ],
    "@stylistic/space-unary-ops": [
      0,
    ],
    "@stylistic/switch-colon-spacing": [
      0,
    ],
    "@stylistic/template-curly-spacing": [
      0,
    ],
    "@stylistic/template-tag-spacing": [
      0,
    ],
    "@stylistic/ts/block-spacing": [
      0,
    ],
    "@stylistic/ts/brace-style": [
      0,
    ],
    "@stylistic/ts/comma-dangle": [
      0,
    ],
    "@stylistic/ts/comma-spacing": [
      0,
    ],
    "@stylistic/ts/func-call-spacing": [
      0,
    ],
    "@stylistic/ts/function-call-spacing": [
      0,
    ],
    "@stylistic/ts/indent": [
      0,
    ],
    "@stylistic/ts/key-spacing": [
      0,
    ],
    "@stylistic/ts/keyword-spacing": [
      0,
    ],
    "@stylistic/ts/lines-around-comment": [
      0,
    ],
    "@stylistic/ts/member-delimiter-style": [
      0,
    ],
    "@stylistic/ts/no-extra-parens": [
      0,
    ],
    "@stylistic/ts/no-extra-semi": [
      0,
    ],
    "@stylistic/ts/object-curly-spacing": [
      0,
    ],
    "@stylistic/ts/quotes": [
      0,
    ],
    "@stylistic/ts/semi": [
      0,
    ],
    "@stylistic/ts/space-before-blocks": [
      0,
    ],
    "@stylistic/ts/space-before-function-paren": [
      0,
    ],
    "@stylistic/ts/space-infix-ops": [
      0,
    ],
    "@stylistic/ts/type-annotation-spacing": [
      0,
    ],
    "@stylistic/type-annotation-spacing": [
      0,
    ],
    "@stylistic/type-generic-spacing": [
      0,
    ],
    "@stylistic/type-named-tuple-spacing": [
      0,
    ],
    "@stylistic/wrap-iife": [
      0,
    ],
    "@stylistic/wrap-regex": [
      0,
    ],
    "@stylistic/yield-star-spacing": [
      0,
    ],
    "@typescript-eslint/await-thenable": [
      2,
    ],
    "@typescript-eslint/ban-ts-comment": [
      2,
    ],
    "@typescript-eslint/block-spacing": [
      0,
    ],
    "@typescript-eslint/brace-style": [
      0,
    ],
    "@typescript-eslint/comma-dangle": [
      0,
    ],
    "@typescript-eslint/comma-spacing": [
      0,
    ],
    "@typescript-eslint/func-call-spacing": [
      0,
    ],
    "@typescript-eslint/indent": [
      0,
    ],
    "@typescript-eslint/key-spacing": [
      0,
    ],
    "@typescript-eslint/keyword-spacing": [
      0,
    ],
    "@typescript-eslint/lines-around-comment": [
      0,
    ],
    "@typescript-eslint/member-delimiter-style": [
      0,
    ],
    "@typescript-eslint/no-array-constructor": [
      2,
    ],
    "@typescript-eslint/no-array-delete": [
      2,
    ],
    "@typescript-eslint/no-base-to-string": [
      2,
    ],
    "@typescript-eslint/no-duplicate-enum-values": [
      2,
    ],
    "@typescript-eslint/no-duplicate-type-constituents": [
      2,
    ],
    "@typescript-eslint/no-empty-object-type": [
      2,
    ],
    "@typescript-eslint/no-explicit-any": [
      2,
    ],
    "@typescript-eslint/no-extra-non-null-assertion": [
      2,
    ],
    "@typescript-eslint/no-extra-parens": [
      0,
    ],
    "@typescript-eslint/no-extra-semi": [
      0,
    ],
    "@typescript-eslint/no-floating-promises": [
      2,
    ],
    "@typescript-eslint/no-for-in-array": [
      2,
    ],
    "@typescript-eslint/no-implied-eval": [
      2,
    ],
    "@typescript-eslint/no-misused-new": [
      2,
    ],
    "@typescript-eslint/no-misused-promises": [
      2,
    ],
    "@typescript-eslint/no-namespace": [
      2,
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": [
      2,
    ],
    "@typescript-eslint/no-redundant-type-constituents": [
      2,
    ],
    "@typescript-eslint/no-require-imports": [
      2,
    ],
    "@typescript-eslint/no-this-alias": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-assertion": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": [
      2,
    ],
    "@typescript-eslint/no-unsafe-argument": [
      2,
    ],
    "@typescript-eslint/no-unsafe-assignment": [
      2,
    ],
    "@typescript-eslint/no-unsafe-call": [
      2,
    ],
    "@typescript-eslint/no-unsafe-declaration-merging": [
      2,
    ],
    "@typescript-eslint/no-unsafe-enum-comparison": [
      2,
    ],
    "@typescript-eslint/no-unsafe-function-type": [
      2,
    ],
    "@typescript-eslint/no-unsafe-member-access": [
      2,
    ],
    "@typescript-eslint/no-unsafe-return": [
      2,
    ],
    "@typescript-eslint/no-unsafe-unary-minus": [
      2,
    ],
    "@typescript-eslint/no-unused-expressions": [
      2,
      {
        "allowShortCircuit": true,
        "allowTaggedTemplates": true,
        "allowTernary": true,
        "ignoreDirectives": true,
      },
    ],
    "@typescript-eslint/no-unused-vars": [
      2,
      {
        "args": "after-used",
        "caughtErrors": "none",
        "ignoreRestSiblings": true,
        "vars": "all",
      },
    ],
    "@typescript-eslint/no-wrapper-object-types": [
      2,
    ],
    "@typescript-eslint/object-curly-spacing": [
      0,
    ],
    "@typescript-eslint/only-throw-error": [
      2,
    ],
    "@typescript-eslint/prefer-as-const": [
      2,
    ],
    "@typescript-eslint/prefer-namespace-keyword": [
      2,
    ],
    "@typescript-eslint/prefer-promise-reject-errors": [
      2,
    ],
    "@typescript-eslint/quotes": [
      0,
    ],
    "@typescript-eslint/require-await": [
      2,
    ],
    "@typescript-eslint/restrict-plus-operands": [
      2,
    ],
    "@typescript-eslint/restrict-template-expressions": [
      2,
    ],
    "@typescript-eslint/semi": [
      0,
    ],
    "@typescript-eslint/space-before-blocks": [
      0,
    ],
    "@typescript-eslint/space-before-function-paren": [
      0,
    ],
    "@typescript-eslint/space-infix-ops": [
      0,
    ],
    "@typescript-eslint/triple-slash-reference": [
      2,
    ],
    "@typescript-eslint/type-annotation-spacing": [
      0,
    ],
    "@typescript-eslint/unbound-method": [
      2,
    ],
    "array-bracket-newline": [
      0,
    ],
    "array-bracket-spacing": [
      0,
    ],
    "array-element-newline": [
      0,
    ],
    "arrow-body-style": [
      0,
      "as-needed",
    ],
    "arrow-parens": [
      0,
    ],
    "arrow-spacing": [
      0,
    ],
    "babel/object-curly-spacing": [
      0,
    ],
    "babel/quotes": [
      0,
    ],
    "babel/semi": [
      0,
    ],
    "block-spacing": [
      0,
    ],
    "brace-style": [
      0,
    ],
    "comma-dangle": [
      0,
    ],
    "comma-spacing": [
      0,
    ],
    "comma-style": [
      0,
    ],
    "computed-property-spacing": [
      0,
    ],
    "constructor-super": [
      0,
    ],
    "curly": [
      0,
      "all",
    ],
    "dot-location": [
      0,
    ],
    "eol-last": [
      0,
    ],
    "eqeqeq": [
      2,
      "always",
      {
        "null": "ignore",
      },
    ],
    "flowtype/boolean-style": [
      0,
    ],
    "flowtype/delimiter-dangle": [
      0,
    ],
    "flowtype/generic-spacing": [
      0,
    ],
    "flowtype/object-type-curly-spacing": [
      0,
    ],
    "flowtype/object-type-delimiter": [
      0,
    ],
    "flowtype/quotes": [
      0,
    ],
    "flowtype/semi": [
      0,
    ],
    "flowtype/space-after-type-colon": [
      0,
    ],
    "flowtype/space-before-generic-bracket": [
      0,
    ],
    "flowtype/space-before-type-colon": [
      0,
    ],
    "flowtype/union-intersection-spacing": [
      0,
    ],
    "func-call-spacing": [
      0,
    ],
    "function-call-argument-newline": [
      0,
    ],
    "function-paren-newline": [
      0,
    ],
    "generator-star": [
      0,
    ],
    "generator-star-spacing": [
      0,
    ],
    "getter-return": [
      0,
      {
        "allowImplicit": false,
      },
    ],
    "implicit-arrow-linebreak": [
      0,
    ],
    "indent": [
      0,
    ],
    "indent-legacy": [
      0,
    ],
    "jsx-quotes": [
      0,
    ],
    "key-spacing": [
      0,
    ],
    "keyword-spacing": [
      0,
    ],
    "linebreak-style": [
      0,
    ],
    "lines-around-comment": [
      0,
    ],
    "max-len": [
      0,
    ],
    "max-statements-per-line": [
      0,
    ],
    "multiline-ternary": [
      0,
    ],
    "n/hashbang": [
      2,
    ],
    "n/no-deprecated-api": [
      2,
    ],
    "n/no-exports-assign": [
      2,
    ],
    "n/no-extraneous-import": [
      0,
    ],
    "n/no-extraneous-require": [
      0,
    ],
    "n/no-missing-import": [
      0,
    ],
    "n/no-missing-require": [
      0,
    ],
    "n/no-process-exit": [
      2,
    ],
    "n/no-unpublished-bin": [
      2,
    ],
    "n/no-unpublished-import": [
      0,
    ],
    "n/no-unpublished-require": [
      0,
    ],
    "n/no-unsupported-features/es-builtins": [
      2,
    ],
    "n/no-unsupported-features/es-syntax": [
      2,
      {
        "ignores": [
          "modules",
        ],
      },
    ],
    "n/no-unsupported-features/node-builtins": [
      2,
    ],
    "n/process-exit-as-throw": [
      2,
    ],
    "new-parens": [
      0,
    ],
    "newline-per-chained-call": [
      0,
    ],
    "no-array-constructor": [
      0,
    ],
    "no-arrow-condition": [
      0,
    ],
    "no-class-assign": [
      0,
    ],
    "no-comma-dangle": [
      0,
    ],
    "no-confusing-arrow": [
      0,
    ],
    "no-const-assign": [
      0,
    ],
    "no-dupe-args": [
      0,
    ],
    "no-dupe-class-members": [
      0,
    ],
    "no-dupe-keys": [
      0,
    ],
    "no-extra-parens": [
      0,
    ],
    "no-extra-semi": [
      0,
    ],
    "no-floating-decimal": [
      0,
    ],
    "no-func-assign": [
      0,
    ],
    "no-implied-eval": [
      0,
    ],
    "no-import-assign": [
      0,
    ],
    "no-mixed-operators": [
      0,
    ],
    "no-mixed-spaces-and-tabs": [
      0,
    ],
    "no-multi-spaces": [
      0,
    ],
    "no-multiple-empty-lines": [
      0,
    ],
    "no-new-native-nonconstructor": [
      0,
    ],
    "no-new-symbol": [
      0,
    ],
    "no-obj-calls": [
      0,
    ],
    "no-redeclare": [
      0,
      {
        "builtinGlobals": true,
      },
    ],
    "no-reserved-keys": [
      0,
    ],
    "no-setter-return": [
      0,
    ],
    "no-space-before-semi": [
      0,
    ],
    "no-spaced-func": [
      0,
    ],
    "no-tabs": [
      0,
    ],
    "no-this-before-super": [
      0,
    ],
    "no-throw-literal": [
      0,
    ],
    "no-trailing-spaces": [
      0,
    ],
    "no-undef": [
      0,
      {
        "typeof": false,
      },
    ],
    "no-unexpected-multiline": [
      2,
    ],
    "no-unreachable": [
      0,
    ],
    "no-unsafe-negation": [
      0,
      {
        "enforceForOrderingRelations": false,
      },
    ],
    "no-unused-expressions": [
      0,
      {
        "allowShortCircuit": false,
        "allowTaggedTemplates": false,
        "allowTernary": false,
        "enforceForJSX": false,
        "ignoreDirectives": false,
      },
    ],
    "no-unused-vars": [
      0,
    ],
    "no-var": [
      2,
    ],
    "no-whitespace-before-property": [
      0,
    ],
    "no-with": [
      0,
    ],
    "no-wrap-func": [
      0,
    ],
    "nonblock-statement-body-position": [
      0,
    ],
    "object-curly-newline": [
      0,
    ],
    "object-curly-spacing": [
      0,
    ],
    "object-property-newline": [
      0,
    ],
    "one-var-declaration-per-line": [
      0,
    ],
    "operator-linebreak": [
      0,
    ],
    "padded-blocks": [
      0,
    ],
    "prefer-arrow-callback": [
      0,
      {
        "allowNamedFunctions": false,
        "allowUnboundThis": true,
      },
    ],
    "prefer-const": [
      2,
      {
        "destructuring": "any",
        "ignoreReadBeforeAssign": false,
      },
    ],
    "prefer-promise-reject-errors": [
      0,
      {
        "allowEmptyReject": false,
      },
    ],
    "prefer-rest-params": [
      2,
    ],
    "prefer-spread": [
      2,
    ],
    "prettier/prettier": [
      2,
    ],
    "quote-props": [
      0,
    ],
    "quotes": [
      0,
    ],
    "react/jsx-child-element-spacing": [
      0,
    ],
    "react/jsx-closing-bracket-location": [
      0,
    ],
    "react/jsx-closing-tag-location": [
      0,
    ],
    "react/jsx-curly-newline": [
      0,
    ],
    "react/jsx-curly-spacing": [
      0,
    ],
    "react/jsx-equals-spacing": [
      0,
    ],
    "react/jsx-first-prop-new-line": [
      0,
    ],
    "react/jsx-indent": [
      0,
    ],
    "react/jsx-indent-props": [
      0,
    ],
    "react/jsx-max-props-per-line": [
      0,
    ],
    "react/jsx-newline": [
      0,
    ],
    "react/jsx-one-expression-per-line": [
      0,
    ],
    "react/jsx-props-no-multi-spaces": [
      0,
    ],
    "react/jsx-space-before-closing": [
      0,
    ],
    "react/jsx-tag-spacing": [
      0,
    ],
    "react/jsx-wrap-multilines": [
      0,
    ],
    "require-await": [
      0,
    ],
    "rest-spread-spacing": [
      0,
    ],
    "semi": [
      0,
    ],
    "semi-spacing": [
      0,
    ],
    "semi-style": [
      0,
    ],
    "space-after-function-name": [
      0,
    ],
    "space-after-keywords": [
      0,
    ],
    "space-before-blocks": [
      0,
    ],
    "space-before-function-paren": [
      0,
    ],
    "space-before-function-parentheses": [
      0,
    ],
    "space-before-keywords": [
      0,
    ],
    "space-in-brackets": [
      0,
    ],
    "space-in-parens": [
      0,
    ],
    "space-infix-ops": [
      0,
    ],
    "space-return-throw-case": [
      0,
    ],
    "space-unary-ops": [
      0,
    ],
    "space-unary-word-ops": [
      0,
    ],
    "standard/array-bracket-even-spacing": [
      0,
    ],
    "standard/computed-property-even-spacing": [
      0,
    ],
    "standard/object-curly-even-spacing": [
      0,
    ],
    "switch-colon-spacing": [
      0,
    ],
    "template-curly-spacing": [
      0,
    ],
    "template-tag-spacing": [
      0,
    ],
    "unicorn/empty-brace-spaces": [
      0,
    ],
    "unicorn/no-nested-ternary": [
      0,
    ],
    "unicorn/number-literal-case": [
      0,
    ],
    "unicorn/template-indent": [
      0,
    ],
    "vue/array-bracket-newline": [
      0,
    ],
    "vue/array-bracket-spacing": [
      0,
    ],
    "vue/array-element-newline": [
      0,
    ],
    "vue/arrow-spacing": [
      0,
    ],
    "vue/block-spacing": [
      0,
    ],
    "vue/block-tag-newline": [
      0,
    ],
    "vue/brace-style": [
      0,
    ],
    "vue/comma-dangle": [
      0,
    ],
    "vue/comma-spacing": [
      0,
    ],
    "vue/comma-style": [
      0,
    ],
    "vue/dot-location": [
      0,
    ],
    "vue/func-call-spacing": [
      0,
    ],
    "vue/html-closing-bracket-newline": [
      0,
    ],
    "vue/html-closing-bracket-spacing": [
      0,
    ],
    "vue/html-end-tags": [
      0,
    ],
    "vue/html-indent": [
      0,
    ],
    "vue/html-quotes": [
      0,
    ],
    "vue/html-self-closing": [
      0,
    ],
    "vue/key-spacing": [
      0,
    ],
    "vue/keyword-spacing": [
      0,
    ],
    "vue/max-attributes-per-line": [
      0,
    ],
    "vue/max-len": [
      0,
    ],
    "vue/multiline-html-element-content-newline": [
      0,
    ],
    "vue/multiline-ternary": [
      0,
    ],
    "vue/mustache-interpolation-spacing": [
      0,
    ],
    "vue/no-extra-parens": [
      0,
    ],
    "vue/no-multi-spaces": [
      0,
    ],
    "vue/no-spaces-around-equal-signs-in-attribute": [
      0,
    ],
    "vue/object-curly-newline": [
      0,
    ],
    "vue/object-curly-spacing": [
      0,
    ],
    "vue/object-property-newline": [
      0,
    ],
    "vue/operator-linebreak": [
      0,
    ],
    "vue/quote-props": [
      0,
    ],
    "vue/script-indent": [
      0,
    ],
    "vue/singleline-html-element-content-newline": [
      0,
    ],
    "vue/space-in-parens": [
      0,
    ],
    "vue/space-infix-ops": [
      0,
    ],
    "vue/space-unary-ops": [
      0,
    ],
    "vue/template-curly-spacing": [
      0,
    ],
    "wrap-iife": [
      0,
    ],
    "wrap-regex": [
      0,
    ],
    "yield-star-spacing": [
      0,
    ],
  },
}
`;

exports[`Base TsConfig > should match rule snapshot 2`] = `
{
  "language": "@/js",
  "languageOptions": {
    "ecmaVersion": 2026,
    "globals": {
      "AbortController": false,
      "AbortSignal": false,
      "AggregateError": false,
      "Array": false,
      "ArrayBuffer": false,
      "Atomics": false,
      "BigInt": false,
      "BigInt64Array": false,
      "BigUint64Array": false,
      "Blob": false,
      "Boolean": false,
      "BroadcastChannel": false,
      "Buffer": false,
      "ByteLengthQueuingStrategy": false,
      "CloseEvent": false,
      "CompressionStream": false,
      "CountQueuingStrategy": false,
      "Crypto": false,
      "CryptoKey": false,
      "CustomEvent": false,
      "DOMException": false,
      "DataView": false,
      "Date": false,
      "DecompressionStream": false,
      "Error": false,
      "EvalError": false,
      "Event": false,
      "EventTarget": false,
      "File": false,
      "FinalizationRegistry": false,
      "Float32Array": false,
      "Float64Array": false,
      "FormData": false,
      "Function": false,
      "Headers": false,
      "Infinity": false,
      "Int16Array": false,
      "Int32Array": false,
      "Int8Array": false,
      "Intl": false,
      "JSON": false,
      "Map": false,
      "Math": false,
      "MessageChannel": false,
      "MessageEvent": false,
      "MessagePort": false,
      "NaN": false,
      "Navigator": false,
      "Number": false,
      "Object": false,
      "Performance": false,
      "PerformanceEntry": false,
      "PerformanceMark": false,
      "PerformanceMeasure": false,
      "PerformanceObserver": false,
      "PerformanceObserverEntryList": false,
      "PerformanceResourceTiming": false,
      "Promise": false,
      "Proxy": false,
      "RangeError": false,
      "ReadableByteStreamController": false,
      "ReadableStream": false,
      "ReadableStreamBYOBReader": false,
      "ReadableStreamBYOBRequest": false,
      "ReadableStreamDefaultController": false,
      "ReadableStreamDefaultReader": false,
      "ReferenceError": false,
      "Reflect": false,
      "RegExp": false,
      "Request": false,
      "Response": false,
      "Set": false,
      "SharedArrayBuffer": false,
      "String": false,
      "SubtleCrypto": false,
      "Symbol": false,
      "SyntaxError": false,
      "TextDecoder": false,
      "TextDecoderStream": false,
      "TextEncoder": false,
      "TextEncoderStream": false,
      "TransformStream": false,
      "TransformStreamDefaultController": false,
      "TypeError": false,
      "URIError": false,
      "URL": false,
      "URLSearchParams": false,
      "Uint16Array": false,
      "Uint32Array": false,
      "Uint8Array": false,
      "Uint8ClampedArray": false,
      "WeakMap": false,
      "WeakRef": false,
      "WeakSet": false,
      "WebAssembly": false,
      "WebSocket": false,
      "WritableStream": false,
      "WritableStreamDefaultController": false,
      "WritableStreamDefaultWriter": false,
      "__dirname": "off",
      "__filename": "off",
      "atob": false,
      "btoa": false,
      "clearImmediate": false,
      "clearInterval": false,
      "clearTimeout": false,
      "console": false,
      "crypto": false,
      "decodeURI": false,
      "decodeURIComponent": false,
      "encodeURI": false,
      "encodeURIComponent": false,
      "escape": false,
      "eval": false,
      "exports": "off",
      "fetch": false,
      "global": false,
      "globalThis": false,
      "isFinite": false,
      "isNaN": false,
      "module": "off",
      "navigator": false,
      "parseFloat": false,
      "parseInt": false,
      "performance": false,
      "process": false,
      "queueMicrotask": false,
      "require": "off",
      "setImmediate": false,
      "setInterval": false,
      "setTimeout": false,
      "structuredClone": false,
      "undefined": false,
      "unescape": false,
    },
    "parser": "typescript-eslint/parser@8.35.1",
    "parserOptions": {
      "ecmaFeatures": {
        "jsx": false,
      },
      "project": true,
      "tsconfigRootDir": "tsconfig.json",
    },
    "sourceType": "module",
  },
  "linterOptions": {
    "reportUnusedDisableDirectives": 1,
  },
  "plugins": [
    "@",
    "@typescript-eslint:@typescript-eslint/eslint-plugin@8.35.1",
    "prettier:eslint-plugin-prettier@5.5.1",
    "n:eslint-plugin-n@17.20.0",
  ],
  "processor": undefined,
  "rules": {
    "@babel/object-curly-spacing": [
      0,
    ],
    "@babel/semi": [
      0,
    ],
    "@stylistic/array-bracket-newline": [
      0,
    ],
    "@stylistic/array-bracket-spacing": [
      0,
    ],
    "@stylistic/array-element-newline": [
      0,
    ],
    "@stylistic/arrow-parens": [
      0,
    ],
    "@stylistic/arrow-spacing": [
      0,
    ],
    "@stylistic/block-spacing": [
      0,
    ],
    "@stylistic/brace-style": [
      0,
    ],
    "@stylistic/comma-dangle": [
      0,
    ],
    "@stylistic/comma-spacing": [
      0,
    ],
    "@stylistic/comma-style": [
      0,
    ],
    "@stylistic/computed-property-spacing": [
      0,
    ],
    "@stylistic/dot-location": [
      0,
    ],
    "@stylistic/eol-last": [
      0,
    ],
    "@stylistic/func-call-spacing": [
      0,
    ],
    "@stylistic/function-call-argument-newline": [
      0,
    ],
    "@stylistic/function-call-spacing": [
      0,
    ],
    "@stylistic/function-paren-newline": [
      0,
    ],
    "@stylistic/generator-star-spacing": [
      0,
    ],
    "@stylistic/implicit-arrow-linebreak": [
      0,
    ],
    "@stylistic/indent": [
      0,
    ],
    "@stylistic/indent-binary-ops": [
      0,
    ],
    "@stylistic/js/array-bracket-newline": [
      0,
    ],
    "@stylistic/js/array-bracket-spacing": [
      0,
    ],
    "@stylistic/js/array-element-newline": [
      0,
    ],
    "@stylistic/js/arrow-parens": [
      0,
    ],
    "@stylistic/js/arrow-spacing": [
      0,
    ],
    "@stylistic/js/block-spacing": [
      0,
    ],
    "@stylistic/js/brace-style": [
      0,
    ],
    "@stylistic/js/comma-dangle": [
      0,
    ],
    "@stylistic/js/comma-spacing": [
      0,
    ],
    "@stylistic/js/comma-style": [
      0,
    ],
    "@stylistic/js/computed-property-spacing": [
      0,
    ],
    "@stylistic/js/dot-location": [
      0,
    ],
    "@stylistic/js/eol-last": [
      0,
    ],
    "@stylistic/js/func-call-spacing": [
      0,
    ],
    "@stylistic/js/function-call-argument-newline": [
      0,
    ],
    "@stylistic/js/function-call-spacing": [
      0,
    ],
    "@stylistic/js/function-paren-newline": [
      0,
    ],
    "@stylistic/js/generator-star-spacing": [
      0,
    ],
    "@stylistic/js/implicit-arrow-linebreak": [
      0,
    ],
    "@stylistic/js/indent": [
      0,
    ],
    "@stylistic/js/jsx-quotes": [
      0,
    ],
    "@stylistic/js/key-spacing": [
      0,
    ],
    "@stylistic/js/keyword-spacing": [
      0,
    ],
    "@stylistic/js/linebreak-style": [
      0,
    ],
    "@stylistic/js/lines-around-comment": [
      0,
    ],
    "@stylistic/js/max-len": [
      0,
    ],
    "@stylistic/js/max-statements-per-line": [
      0,
    ],
    "@stylistic/js/multiline-ternary": [
      0,
    ],
    "@stylistic/js/new-parens": [
      0,
    ],
    "@stylistic/js/newline-per-chained-call": [
      0,
    ],
    "@stylistic/js/no-confusing-arrow": [
      0,
    ],
    "@stylistic/js/no-extra-parens": [
      0,
    ],
    "@stylistic/js/no-extra-semi": [
      0,
    ],
    "@stylistic/js/no-floating-decimal": [
      0,
    ],
    "@stylistic/js/no-mixed-operators": [
      0,
    ],
    "@stylistic/js/no-mixed-spaces-and-tabs": [
      0,
    ],
    "@stylistic/js/no-multi-spaces": [
      0,
    ],
    "@stylistic/js/no-multiple-empty-lines": [
      0,
    ],
    "@stylistic/js/no-tabs": [
      0,
    ],
    "@stylistic/js/no-trailing-spaces": [
      0,
    ],
    "@stylistic/js/no-whitespace-before-property": [
      0,
    ],
    "@stylistic/js/nonblock-statement-body-position": [
      0,
    ],
    "@stylistic/js/object-curly-newline": [
      0,
    ],
    "@stylistic/js/object-curly-spacing": [
      0,
    ],
    "@stylistic/js/object-property-newline": [
      0,
    ],
    "@stylistic/js/one-var-declaration-per-line": [
      0,
    ],
    "@stylistic/js/operator-linebreak": [
      0,
    ],
    "@stylistic/js/padded-blocks": [
      0,
    ],
    "@stylistic/js/quote-props": [
      0,
    ],
    "@stylistic/js/quotes": [
      0,
    ],
    "@stylistic/js/rest-spread-spacing": [
      0,
    ],
    "@stylistic/js/semi": [
      0,
    ],
    "@stylistic/js/semi-spacing": [
      0,
    ],
    "@stylistic/js/semi-style": [
      0,
    ],
    "@stylistic/js/space-before-blocks": [
      0,
    ],
    "@stylistic/js/space-before-function-paren": [
      0,
    ],
    "@stylistic/js/space-in-parens": [
      0,
    ],
    "@stylistic/js/space-infix-ops": [
      0,
    ],
    "@stylistic/js/space-unary-ops": [
      0,
    ],
    "@stylistic/js/switch-colon-spacing": [
      0,
    ],
    "@stylistic/js/template-curly-spacing": [
      0,
    ],
    "@stylistic/js/template-tag-spacing": [
      0,
    ],
    "@stylistic/js/wrap-iife": [
      0,
    ],
    "@stylistic/js/wrap-regex": [
      0,
    ],
    "@stylistic/js/yield-star-spacing": [
      0,
    ],
    "@stylistic/jsx-child-element-spacing": [
      0,
    ],
    "@stylistic/jsx-closing-bracket-location": [
      0,
    ],
    "@stylistic/jsx-closing-tag-location": [
      0,
    ],
    "@stylistic/jsx-curly-newline": [
      0,
    ],
    "@stylistic/jsx-curly-spacing": [
      0,
    ],
    "@stylistic/jsx-equals-spacing": [
      0,
    ],
    "@stylistic/jsx-first-prop-new-line": [
      0,
    ],
    "@stylistic/jsx-indent": [
      0,
    ],
    "@stylistic/jsx-indent-props": [
      0,
    ],
    "@stylistic/jsx-max-props-per-line": [
      0,
    ],
    "@stylistic/jsx-newline": [
      0,
    ],
    "@stylistic/jsx-one-expression-per-line": [
      0,
    ],
    "@stylistic/jsx-props-no-multi-spaces": [
      0,
    ],
    "@stylistic/jsx-quotes": [
      0,
    ],
    "@stylistic/jsx-tag-spacing": [
      0,
    ],
    "@stylistic/jsx-wrap-multilines": [
      0,
    ],
    "@stylistic/jsx/jsx-child-element-spacing": [
      0,
    ],
    "@stylistic/jsx/jsx-closing-bracket-location": [
      0,
    ],
    "@stylistic/jsx/jsx-closing-tag-location": [
      0,
    ],
    "@stylistic/jsx/jsx-curly-newline": [
      0,
    ],
    "@stylistic/jsx/jsx-curly-spacing": [
      0,
    ],
    "@stylistic/jsx/jsx-equals-spacing": [
      0,
    ],
    "@stylistic/jsx/jsx-first-prop-new-line": [
      0,
    ],
    "@stylistic/jsx/jsx-indent": [
      0,
    ],
    "@stylistic/jsx/jsx-indent-props": [
      0,
    ],
    "@stylistic/jsx/jsx-max-props-per-line": [
      0,
    ],
    "@stylistic/key-spacing": [
      0,
    ],
    "@stylistic/keyword-spacing": [
      0,
    ],
    "@stylistic/linebreak-style": [
      0,
    ],
    "@stylistic/lines-around-comment": [
      0,
    ],
    "@stylistic/max-len": [
      0,
    ],
    "@stylistic/max-statements-per-line": [
      0,
    ],
    "@stylistic/member-delimiter-style": [
      0,
    ],
    "@stylistic/multiline-ternary": [
      0,
    ],
    "@stylistic/new-parens": [
      0,
    ],
    "@stylistic/newline-per-chained-call": [
      0,
    ],
    "@stylistic/no-confusing-arrow": [
      0,
    ],
    "@stylistic/no-extra-parens": [
      0,
    ],
    "@stylistic/no-extra-semi": [
      0,
    ],
    "@stylistic/no-floating-decimal": [
      0,
    ],
    "@stylistic/no-mixed-operators": [
      0,
    ],
    "@stylistic/no-mixed-spaces-and-tabs": [
      0,
    ],
    "@stylistic/no-multi-spaces": [
      0,
    ],
    "@stylistic/no-multiple-empty-lines": [
      0,
    ],
    "@stylistic/no-tabs": [
      0,
    ],
    "@stylistic/no-trailing-spaces": [
      0,
    ],
    "@stylistic/no-whitespace-before-property": [
      0,
    ],
    "@stylistic/nonblock-statement-body-position": [
      0,
    ],
    "@stylistic/object-curly-newline": [
      0,
    ],
    "@stylistic/object-curly-spacing": [
      0,
    ],
    "@stylistic/object-property-newline": [
      0,
    ],
    "@stylistic/one-var-declaration-per-line": [
      0,
    ],
    "@stylistic/operator-linebreak": [
      0,
    ],
    "@stylistic/padded-blocks": [
      0,
    ],
    "@stylistic/quote-props": [
      0,
    ],
    "@stylistic/quotes": [
      0,
    ],
    "@stylistic/rest-spread-spacing": [
      0,
    ],
    "@stylistic/semi": [
      0,
    ],
    "@stylistic/semi-spacing": [
      0,
    ],
    "@stylistic/semi-style": [
      0,
    ],
    "@stylistic/space-before-blocks": [
      0,
    ],
    "@stylistic/space-before-function-paren": [
      0,
    ],
    "@stylistic/space-in-parens": [
      0,
    ],
    "@stylistic/space-infix-ops": [
      0,
    ],
    "@stylistic/space-unary-ops": [
      0,
    ],
    "@stylistic/switch-colon-spacing": [
      0,
    ],
    "@stylistic/template-curly-spacing": [
      0,
    ],
    "@stylistic/template-tag-spacing": [
      0,
    ],
    "@stylistic/ts/block-spacing": [
      0,
    ],
    "@stylistic/ts/brace-style": [
      0,
    ],
    "@stylistic/ts/comma-dangle": [
      0,
    ],
    "@stylistic/ts/comma-spacing": [
      0,
    ],
    "@stylistic/ts/func-call-spacing": [
      0,
    ],
    "@stylistic/ts/function-call-spacing": [
      0,
    ],
    "@stylistic/ts/indent": [
      0,
    ],
    "@stylistic/ts/key-spacing": [
      0,
    ],
    "@stylistic/ts/keyword-spacing": [
      0,
    ],
    "@stylistic/ts/lines-around-comment": [
      0,
    ],
    "@stylistic/ts/member-delimiter-style": [
      0,
    ],
    "@stylistic/ts/no-extra-parens": [
      0,
    ],
    "@stylistic/ts/no-extra-semi": [
      0,
    ],
    "@stylistic/ts/object-curly-spacing": [
      0,
    ],
    "@stylistic/ts/quotes": [
      0,
    ],
    "@stylistic/ts/semi": [
      0,
    ],
    "@stylistic/ts/space-before-blocks": [
      0,
    ],
    "@stylistic/ts/space-before-function-paren": [
      0,
    ],
    "@stylistic/ts/space-infix-ops": [
      0,
    ],
    "@stylistic/ts/type-annotation-spacing": [
      0,
    ],
    "@stylistic/type-annotation-spacing": [
      0,
    ],
    "@stylistic/type-generic-spacing": [
      0,
    ],
    "@stylistic/type-named-tuple-spacing": [
      0,
    ],
    "@stylistic/wrap-iife": [
      0,
    ],
    "@stylistic/wrap-regex": [
      0,
    ],
    "@stylistic/yield-star-spacing": [
      0,
    ],
    "@typescript-eslint/await-thenable": [
      2,
    ],
    "@typescript-eslint/ban-ts-comment": [
      2,
    ],
    "@typescript-eslint/block-spacing": [
      0,
    ],
    "@typescript-eslint/brace-style": [
      0,
    ],
    "@typescript-eslint/comma-dangle": [
      0,
    ],
    "@typescript-eslint/comma-spacing": [
      0,
    ],
    "@typescript-eslint/func-call-spacing": [
      0,
    ],
    "@typescript-eslint/indent": [
      0,
    ],
    "@typescript-eslint/key-spacing": [
      0,
    ],
    "@typescript-eslint/keyword-spacing": [
      0,
    ],
    "@typescript-eslint/lines-around-comment": [
      0,
    ],
    "@typescript-eslint/member-delimiter-style": [
      0,
    ],
    "@typescript-eslint/no-array-constructor": [
      2,
    ],
    "@typescript-eslint/no-array-delete": [
      2,
    ],
    "@typescript-eslint/no-base-to-string": [
      2,
    ],
    "@typescript-eslint/no-duplicate-enum-values": [
      2,
    ],
    "@typescript-eslint/no-duplicate-type-constituents": [
      2,
    ],
    "@typescript-eslint/no-empty-object-type": [
      2,
    ],
    "@typescript-eslint/no-explicit-any": [
      2,
    ],
    "@typescript-eslint/no-extra-non-null-assertion": [
      2,
    ],
    "@typescript-eslint/no-extra-parens": [
      0,
    ],
    "@typescript-eslint/no-extra-semi": [
      0,
    ],
    "@typescript-eslint/no-floating-promises": [
      2,
    ],
    "@typescript-eslint/no-for-in-array": [
      2,
    ],
    "@typescript-eslint/no-implied-eval": [
      2,
    ],
    "@typescript-eslint/no-misused-new": [
      2,
    ],
    "@typescript-eslint/no-misused-promises": [
      2,
    ],
    "@typescript-eslint/no-namespace": [
      2,
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": [
      2,
    ],
    "@typescript-eslint/no-redundant-type-constituents": [
      2,
    ],
    "@typescript-eslint/no-require-imports": [
      2,
    ],
    "@typescript-eslint/no-this-alias": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-assertion": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": [
      2,
    ],
    "@typescript-eslint/no-unsafe-argument": [
      2,
    ],
    "@typescript-eslint/no-unsafe-assignment": [
      2,
    ],
    "@typescript-eslint/no-unsafe-call": [
      2,
    ],
    "@typescript-eslint/no-unsafe-declaration-merging": [
      2,
    ],
    "@typescript-eslint/no-unsafe-enum-comparison": [
      2,
    ],
    "@typescript-eslint/no-unsafe-function-type": [
      2,
    ],
    "@typescript-eslint/no-unsafe-member-access": [
      2,
    ],
    "@typescript-eslint/no-unsafe-return": [
      2,
    ],
    "@typescript-eslint/no-unsafe-unary-minus": [
      2,
    ],
    "@typescript-eslint/no-unused-expressions": [
      2,
      {
        "allowShortCircuit": true,
        "allowTaggedTemplates": true,
        "allowTernary": true,
        "ignoreDirectives": true,
      },
    ],
    "@typescript-eslint/no-unused-vars": [
      2,
      {
        "args": "after-used",
        "caughtErrors": "none",
        "ignoreRestSiblings": true,
        "vars": "all",
      },
    ],
    "@typescript-eslint/no-wrapper-object-types": [
      2,
    ],
    "@typescript-eslint/object-curly-spacing": [
      0,
    ],
    "@typescript-eslint/only-throw-error": [
      2,
    ],
    "@typescript-eslint/prefer-as-const": [
      2,
    ],
    "@typescript-eslint/prefer-namespace-keyword": [
      2,
    ],
    "@typescript-eslint/prefer-promise-reject-errors": [
      2,
    ],
    "@typescript-eslint/quotes": [
      0,
    ],
    "@typescript-eslint/require-await": [
      2,
    ],
    "@typescript-eslint/restrict-plus-operands": [
      2,
    ],
    "@typescript-eslint/restrict-template-expressions": [
      2,
    ],
    "@typescript-eslint/semi": [
      0,
    ],
    "@typescript-eslint/space-before-blocks": [
      0,
    ],
    "@typescript-eslint/space-before-function-paren": [
      0,
    ],
    "@typescript-eslint/space-infix-ops": [
      0,
    ],
    "@typescript-eslint/triple-slash-reference": [
      2,
    ],
    "@typescript-eslint/type-annotation-spacing": [
      0,
    ],
    "@typescript-eslint/unbound-method": [
      2,
    ],
    "array-bracket-newline": [
      0,
    ],
    "array-bracket-spacing": [
      0,
    ],
    "array-element-newline": [
      0,
    ],
    "arrow-body-style": [
      0,
      "as-needed",
    ],
    "arrow-parens": [
      0,
    ],
    "arrow-spacing": [
      0,
    ],
    "babel/object-curly-spacing": [
      0,
    ],
    "babel/quotes": [
      0,
    ],
    "babel/semi": [
      0,
    ],
    "block-spacing": [
      0,
    ],
    "brace-style": [
      0,
    ],
    "comma-dangle": [
      0,
    ],
    "comma-spacing": [
      0,
    ],
    "comma-style": [
      0,
    ],
    "computed-property-spacing": [
      0,
    ],
    "constructor-super": [
      0,
    ],
    "curly": [
      0,
      "all",
    ],
    "dot-location": [
      0,
    ],
    "eol-last": [
      0,
    ],
    "eqeqeq": [
      2,
      "always",
      {
        "null": "ignore",
      },
    ],
    "flowtype/boolean-style": [
      0,
    ],
    "flowtype/delimiter-dangle": [
      0,
    ],
    "flowtype/generic-spacing": [
      0,
    ],
    "flowtype/object-type-curly-spacing": [
      0,
    ],
    "flowtype/object-type-delimiter": [
      0,
    ],
    "flowtype/quotes": [
      0,
    ],
    "flowtype/semi": [
      0,
    ],
    "flowtype/space-after-type-colon": [
      0,
    ],
    "flowtype/space-before-generic-bracket": [
      0,
    ],
    "flowtype/space-before-type-colon": [
      0,
    ],
    "flowtype/union-intersection-spacing": [
      0,
    ],
    "func-call-spacing": [
      0,
    ],
    "function-call-argument-newline": [
      0,
    ],
    "function-paren-newline": [
      0,
    ],
    "generator-star": [
      0,
    ],
    "generator-star-spacing": [
      0,
    ],
    "getter-return": [
      0,
      {
        "allowImplicit": false,
      },
    ],
    "implicit-arrow-linebreak": [
      0,
    ],
    "indent": [
      0,
    ],
    "indent-legacy": [
      0,
    ],
    "jsx-quotes": [
      0,
    ],
    "key-spacing": [
      0,
    ],
    "keyword-spacing": [
      0,
    ],
    "linebreak-style": [
      0,
    ],
    "lines-around-comment": [
      0,
    ],
    "max-len": [
      0,
    ],
    "max-statements-per-line": [
      0,
    ],
    "multiline-ternary": [
      0,
    ],
    "n/hashbang": [
      2,
    ],
    "n/no-deprecated-api": [
      2,
    ],
    "n/no-exports-assign": [
      2,
    ],
    "n/no-extraneous-import": [
      0,
    ],
    "n/no-extraneous-require": [
      0,
    ],
    "n/no-missing-import": [
      0,
    ],
    "n/no-missing-require": [
      0,
    ],
    "n/no-process-exit": [
      2,
    ],
    "n/no-unpublished-bin": [
      2,
    ],
    "n/no-unpublished-import": [
      0,
    ],
    "n/no-unpublished-require": [
      0,
    ],
    "n/no-unsupported-features/es-builtins": [
      2,
    ],
    "n/no-unsupported-features/es-syntax": [
      2,
      {
        "ignores": [
          "modules",
        ],
      },
    ],
    "n/no-unsupported-features/node-builtins": [
      2,
    ],
    "n/process-exit-as-throw": [
      2,
    ],
    "new-parens": [
      0,
    ],
    "newline-per-chained-call": [
      0,
    ],
    "no-array-constructor": [
      0,
    ],
    "no-arrow-condition": [
      0,
    ],
    "no-class-assign": [
      0,
    ],
    "no-comma-dangle": [
      0,
    ],
    "no-confusing-arrow": [
      0,
    ],
    "no-const-assign": [
      0,
    ],
    "no-dupe-args": [
      0,
    ],
    "no-dupe-class-members": [
      0,
    ],
    "no-dupe-keys": [
      0,
    ],
    "no-extra-parens": [
      0,
    ],
    "no-extra-semi": [
      0,
    ],
    "no-floating-decimal": [
      0,
    ],
    "no-func-assign": [
      0,
    ],
    "no-implied-eval": [
      0,
    ],
    "no-import-assign": [
      0,
    ],
    "no-mixed-operators": [
      0,
    ],
    "no-mixed-spaces-and-tabs": [
      0,
    ],
    "no-multi-spaces": [
      0,
    ],
    "no-multiple-empty-lines": [
      0,
    ],
    "no-new-native-nonconstructor": [
      0,
    ],
    "no-new-symbol": [
      0,
    ],
    "no-obj-calls": [
      0,
    ],
    "no-redeclare": [
      0,
      {
        "builtinGlobals": true,
      },
    ],
    "no-reserved-keys": [
      0,
    ],
    "no-setter-return": [
      0,
    ],
    "no-space-before-semi": [
      0,
    ],
    "no-spaced-func": [
      0,
    ],
    "no-tabs": [
      0,
    ],
    "no-this-before-super": [
      0,
    ],
    "no-throw-literal": [
      0,
    ],
    "no-trailing-spaces": [
      0,
    ],
    "no-undef": [
      0,
      {
        "typeof": false,
      },
    ],
    "no-unexpected-multiline": [
      2,
    ],
    "no-unreachable": [
      0,
    ],
    "no-unsafe-negation": [
      0,
      {
        "enforceForOrderingRelations": false,
      },
    ],
    "no-unused-expressions": [
      0,
      {
        "allowShortCircuit": false,
        "allowTaggedTemplates": false,
        "allowTernary": false,
        "enforceForJSX": false,
        "ignoreDirectives": false,
      },
    ],
    "no-unused-vars": [
      0,
    ],
    "no-var": [
      2,
    ],
    "no-whitespace-before-property": [
      0,
    ],
    "no-with": [
      0,
    ],
    "no-wrap-func": [
      0,
    ],
    "nonblock-statement-body-position": [
      0,
    ],
    "object-curly-newline": [
      0,
    ],
    "object-curly-spacing": [
      0,
    ],
    "object-property-newline": [
      0,
    ],
    "one-var-declaration-per-line": [
      0,
    ],
    "operator-linebreak": [
      0,
    ],
    "padded-blocks": [
      0,
    ],
    "prefer-arrow-callback": [
      0,
      {
        "allowNamedFunctions": false,
        "allowUnboundThis": true,
      },
    ],
    "prefer-const": [
      2,
      {
        "destructuring": "any",
        "ignoreReadBeforeAssign": false,
      },
    ],
    "prefer-promise-reject-errors": [
      0,
      {
        "allowEmptyReject": false,
      },
    ],
    "prefer-rest-params": [
      2,
    ],
    "prefer-spread": [
      2,
    ],
    "prettier/prettier": [
      2,
    ],
    "quote-props": [
      0,
    ],
    "quotes": [
      0,
    ],
    "react/jsx-child-element-spacing": [
      0,
    ],
    "react/jsx-closing-bracket-location": [
      0,
    ],
    "react/jsx-closing-tag-location": [
      0,
    ],
    "react/jsx-curly-newline": [
      0,
    ],
    "react/jsx-curly-spacing": [
      0,
    ],
    "react/jsx-equals-spacing": [
      0,
    ],
    "react/jsx-first-prop-new-line": [
      0,
    ],
    "react/jsx-indent": [
      0,
    ],
    "react/jsx-indent-props": [
      0,
    ],
    "react/jsx-max-props-per-line": [
      0,
    ],
    "react/jsx-newline": [
      0,
    ],
    "react/jsx-one-expression-per-line": [
      0,
    ],
    "react/jsx-props-no-multi-spaces": [
      0,
    ],
    "react/jsx-space-before-closing": [
      0,
    ],
    "react/jsx-tag-spacing": [
      0,
    ],
    "react/jsx-wrap-multilines": [
      0,
    ],
    "require-await": [
      0,
    ],
    "rest-spread-spacing": [
      0,
    ],
    "semi": [
      0,
    ],
    "semi-spacing": [
      0,
    ],
    "semi-style": [
      0,
    ],
    "space-after-function-name": [
      0,
    ],
    "space-after-keywords": [
      0,
    ],
    "space-before-blocks": [
      0,
    ],
    "space-before-function-paren": [
      0,
    ],
    "space-before-function-parentheses": [
      0,
    ],
    "space-before-keywords": [
      0,
    ],
    "space-in-brackets": [
      0,
    ],
    "space-in-parens": [
      0,
    ],
    "space-infix-ops": [
      0,
    ],
    "space-return-throw-case": [
      0,
    ],
    "space-unary-ops": [
      0,
    ],
    "space-unary-word-ops": [
      0,
    ],
    "standard/array-bracket-even-spacing": [
      0,
    ],
    "standard/computed-property-even-spacing": [
      0,
    ],
    "standard/object-curly-even-spacing": [
      0,
    ],
    "switch-colon-spacing": [
      0,
    ],
    "template-curly-spacing": [
      0,
    ],
    "template-tag-spacing": [
      0,
    ],
    "unicorn/empty-brace-spaces": [
      0,
    ],
    "unicorn/no-nested-ternary": [
      0,
    ],
    "unicorn/number-literal-case": [
      0,
    ],
    "unicorn/template-indent": [
      0,
    ],
    "vue/array-bracket-newline": [
      0,
    ],
    "vue/array-bracket-spacing": [
      0,
    ],
    "vue/array-element-newline": [
      0,
    ],
    "vue/arrow-spacing": [
      0,
    ],
    "vue/block-spacing": [
      0,
    ],
    "vue/block-tag-newline": [
      0,
    ],
    "vue/brace-style": [
      0,
    ],
    "vue/comma-dangle": [
      0,
    ],
    "vue/comma-spacing": [
      0,
    ],
    "vue/comma-style": [
      0,
    ],
    "vue/dot-location": [
      0,
    ],
    "vue/func-call-spacing": [
      0,
    ],
    "vue/html-closing-bracket-newline": [
      0,
    ],
    "vue/html-closing-bracket-spacing": [
      0,
    ],
    "vue/html-end-tags": [
      0,
    ],
    "vue/html-indent": [
      0,
    ],
    "vue/html-quotes": [
      0,
    ],
    "vue/html-self-closing": [
      0,
    ],
    "vue/key-spacing": [
      0,
    ],
    "vue/keyword-spacing": [
      0,
    ],
    "vue/max-attributes-per-line": [
      0,
    ],
    "vue/max-len": [
      0,
    ],
    "vue/multiline-html-element-content-newline": [
      0,
    ],
    "vue/multiline-ternary": [
      0,
    ],
    "vue/mustache-interpolation-spacing": [
      0,
    ],
    "vue/no-extra-parens": [
      0,
    ],
    "vue/no-multi-spaces": [
      0,
    ],
    "vue/no-spaces-around-equal-signs-in-attribute": [
      0,
    ],
    "vue/object-curly-newline": [
      0,
    ],
    "vue/object-curly-spacing": [
      0,
    ],
    "vue/object-property-newline": [
      0,
    ],
    "vue/operator-linebreak": [
      0,
    ],
    "vue/quote-props": [
      0,
    ],
    "vue/script-indent": [
      0,
    ],
    "vue/singleline-html-element-content-newline": [
      0,
    ],
    "vue/space-in-parens": [
      0,
    ],
    "vue/space-infix-ops": [
      0,
    ],
    "vue/space-unary-ops": [
      0,
    ],
    "vue/template-curly-spacing": [
      0,
    ],
    "wrap-iife": [
      0,
    ],
    "wrap-regex": [
      0,
    ],
    "yield-star-spacing": [
      0,
    ],
  },
}
`;
